kubernetes/curl-pod.yaml
apiVersion: v1
kind: Pod
metadata:
  name: curl
  namespace: default
spec:
  containers:
  - name: curl
    image: curlimages/curl:7.73.0
    command: ["/bin/sh", "-c", "sleep 3600"]
