kubernetes/k8s-deployment.yml
apiVersion: v1    # Create service for image operation-model-service
kind: Service
metadata: 
  name: fishing-model-serv
spec: 
  selector: 
    app: fishing-model       # App defined in Deployment above
  ports: 
    - port: 4000
      targetPort: 4000
---
apiVersion: apps/v1     # Create deployment for image operation-app
kind: Deployment
metadata: 
  name: fishing-web-depl 
  labels: 
    app: fishing-web
spec: 
  replicas: 1
  selector: 
    matchLabels: 
      app: fishing-web
  template: 
    metadata: 
      labels: 
        app: fishing-web
    spec: 
      containers: 
      - name: fishing-web 
        image: operation-app   # TODO: ghcr.io/remla2024-team14/app:latest
        imagePullPolicy: Never
        ports: 
        - containerPort: 3000
---
apiVersion: v1     # Create service for image operation-app
kind: Service
metadata: 
  name: fishing-web-serv
spec:
  selector: 
    app: fishing-web   # App defined in Deployment above
  ports: 
    - port: 3000
      targetPort: 3000
---
apiVersion: networking.k8s.io/v1   # Create an Ingress for the application (to expose the ClusterIP service)
kind: Ingress
metadata: 
  name: my-ingress
spec: 
  defaultBackend:
    service: 
      name: fishing-web-serv 
      port: 
        number: 3000
